super admin changes

--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -3,10 +3,10 @@
     <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add Company</button>
     <div class="flex-wrap">
       <h1>Company</h1>
-      <div class="form-group search-box search">
+      <!-- <div class="form-group search-box search">
         <input type="text" class="form-control" #SearchInput [ngClass]="{'loading':isSearching}"
           placeholder="Search here...">
-      </div>
+      </div> -->
     </div>
   </section>
 
