--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
@@ -5,7 +5,8 @@
             <div class="modal-content edit-user modal-content-area modal-lg">
                 <div class="add-user-popup">
                     <!-- Modal Header -->
-                    <div class="modal-header black-header">
+                    <div class="modal-header">
+                        <span class="material-icons"> list </span>
                         <h4 class="modal-title" *ngIf="isEdit">Edit User</h4>
                         <h4 class="modal-title" *ngIf="!isEdit">Add User</h4>
                         <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
