--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -3,10 +3,10 @@
     <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New</button>
     <div class="flex-wrap">
       <h1>Currency</h1>
-      <div class="form-group search-box search">
+      <!-- <div class="form-group search-box search">
         <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
           placeholder="Search here...">
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -18,7 +18,7 @@
           <th style="width: 20%;" (click)="sort('CurrencyName')"> Name </th>
           <th style="width: 15%;" (click)="sort('CurrencySymbol')"> Symbol </th>
           <th style="width: 20%;" (click)="sort('CurrencyUnit')"> Unit </th>
-          <th>Operation</th>
+          <th style="width: 20%;"> Operation</th>
         </tr>
       </thead>
     </table>
@@ -30,7 +30,7 @@
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.CurrencyName}}</td>
             <td style="width: 15%;">{{item.CurrencySymbol}}</td>
             <td style="width: 20%;">{{item.CurrencyUnit}}</td>
-            <td class="btn-wrap">
+            <td style="width: 20%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
