--- a/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
@@ -1,10 +1,11 @@
 <ng-template #addUserModal let-modal>
   <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-    <div class="currency-popup">
+    <div class="main-popup currency-popup">
       <div class="modal-content modal-content-area modal-md">
 
         <!-- Modal Header -->
         <div class="modal-header">
+          <span class="material-icons"> list </span>
           <h4 class="modal-title">CURRENCY</h4>
           <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
         </div>
