--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -4,10 +4,10 @@
     <button class="float-right btn" mat-flat-button color="primary" (click)="openAdd()">Add New</button>
     <div class="flex-wrap">
       <h1>User</h1>
-      <div class="form-group search-box search">
+      <!-- <div class="form-group search-box search">
         <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
           placeholder="Search here...">
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -37,7 +37,7 @@
             <td style="width: 10%;" [ngStyle]="{'color':item.status==1 ? 'green' : '#c0bbc7'}">
               {{item.status==0?'Suspended':'Active'}}
             </td>
-            <td class="btn-wrap">
+            <td style="width: 20%;">
               <span class="material-icons" (click)="openEdit(item)"> edit </span>
               <span class="material-icons" (click)="openDelete(item)"> delete </span>
             </td>
