--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -22,8 +22,8 @@
 
 <!--super admin login -->
 
-<!-- <app-add-popup *ngIf="showAdd" [fields]="addFormData" (formCancel)="cancelAdd($event)"
-  (formSubmitted)="submitAdd($event)"></app-add-popup> -->
+<app-add-popup *ngIf="showAdd" [fields]="addFormData" (formCancel)="cancelAdd($event)"
+  (formSubmitted)="submitAdd($event)"></app-add-popup>
 
 <mat-toolbar color="primary" class="app-toolbar no-print">
 
@@ -42,5 +42,27 @@
     <div class="search-container">
       <input type="search" aria-label="search" placeholder="Search" #SearchInput>
     </div>
+    <!--  -->
+    <div class="toolbar-external-icons-container">
+      <a>
+        <mat-icon role="img" class="mat-icon notranslate mat-icon-no-color" *ngIf="!isSuperAdmin" aria-hidden="true"
+          (click)="openAdd()">
+          <img src="../assets/img/settings-icon.svg">
+        </mat-icon>
+      </a>
+      <a *ngIf="!isSuperAdmin" class="user-name">Hello, {{userDetails.user_name}}</a>
+      <a *ngIf="isSuperAdmin" class="user-name">Super Admin</a>
+      <a>
+        <mat-icon role="img" class="mat-icon notranslate mat-icon-no-color" aria-hidden="true">
+          <img src="../assets/img/user-img.png" alt="">
+        </mat-icon>
+      </a>
+      <a>
+        <mat-icon (click)="logout()" role="img" class="mat-icon notranslate mat-icon-no-color" aria-hidden="true">
+          <span class="material-icons"> exit_to_app </span>
+        </mat-icon>
+      </a>
+    </div>
+    <!--  -->
   </mat-toolbar-row>
 </mat-toolbar>
